<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ss_select"
    android:orientation="horizontal"
    android:screenOrientation="landscape" >

    <TableLayout
        android:id="@+id/AddPeople"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableRow
            android:id="@+id/Row1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/EnterInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person"
                android:textColor="@color/Red1" />
        </TableRow>

        <TableRow
            android:id="@+id/Row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <TableRow
            android:id="@+id/RowPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/NameofPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameofperson"
                android:textColor="@color/Red2" />

            <EditText
                android:id="@+id/personName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/RowPartner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/NameofPartner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameofpartner"
                android:textColor="@color/Red2" />

            <EditText
                android:id="@+id/partnerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/RowNextPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/NextPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next" />
        </TableRow>

        <TableRow
            android:id="@+id/RowContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/getList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getlist" />
        </TableRow>

        <TextView
            android:id="@+id/Note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note" />
    </TableLayout>

</FrameLayout>